# kaniko_demo

./: .env.example  .tool-versions  README.md  configmap.yml  kaniko-dir.yml  kaniko-git.yaml  kaniko-git.yml  pyproject.toml  requirements.txt
app/: main.py
