[tool.poetry]
name = "kaniko-demo"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "kaniko_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
